deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  skelet
  labels:
    app: skelet
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: skelet
    spec:
      volumes:
      - name: source-code
        hostPath:
          path: /Users/rijad/viaaurea/skelet-v7
      imagePullSecrets:
      - name: gitlab-docker-registry
      containers:
      - image: gitlab.viaaurea.cz:4567/docker/php-7.2-local:2.0.9
        name:  php
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        volumeMounts:
        - name: source-code
          mountPath: /var/www/html
