service.yml
kind: Service
apiVersion: v1
metadata:
  name:  skelet
spec:
  selector:
    app: skelet
  ports:
  - name:  http
    port:  80
    targetPort:  80
